# GamePhysics

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  Colors.h  Draw.cpp  Draw.h  Input.h  Math.cpp  Math.h  PhysicsUtils.cpp  PhysicsUtils.h  Preferences.cpp  Preferences.h  Random.cpp  Random.h  Scene.h  Simple2DScene.cpp  Simple2DScene.h
src/objects/: Circle.cpp  Circle.h
src/scenes/: Assignment1Scene.cpp  Assignment1Scene.h  Assignment2Scene.cpp  Assignment2Scene.h  Assignment3.cpp  Assignment3.h  Assignment4.cpp  Assignment4.h  Assignment5 .cpp  Assignment5 .h  TestScene.cpp  TestScene.h
